--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "express": "^4.21.1",
     "mysql2": "^3.11.3",
     "path": "^0.12.7",
-    "react-datepicker": "^7.5.0"
+    "react-datepicker": "^7.5.0",
+    "react-router-dom": "^6.28.0"
   }
 }
