--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,3 @@
 node_modules.git\objects\pack\pack-b379d69c09fe7c0940b73e252663798d024fee70.pack
 .env
+.git\objects\pack\pack-343a14eeb4197b7b15367eebc0d074f4b7c50a45.pack
